fixed navbar spacing

--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -17,6 +17,7 @@
     font-weight: bold;
     font-family: "Space Mono";
     width: 100px;
+    display: inline;
 }
 
 .navbar-brand{
@@ -44,7 +45,7 @@
 .cart {
     display: flex;
     align-items: center;
-    color: #387780 !important;
+    fill: #387780 !important;
     font-weight: bold;
     font-family: "Space Mono";
 }
